--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -173,7 +173,7 @@ p {
   font-weight: 400;
   opacity: 0.2;
   white-space: nowrap;
-  line-height: calc(120px + (100 – 50) * ((100vw – 400px) / (800 – 400)));
+  /* line-height: calc(120px + (100 – 50) * ((100vw – 400px) / (800 – 400))); */
 }
 
 /* BUTTON */
